# lolcat-rs

./: Cargo.toml  LICENSE
src/: main.rs
src/lib/: mod.rs  opts.rs
