[package]
name = "lolcat-rs"
description = "Rainbow coloring effect for text console display, now lightning fast"
version = "0.1.0"
authors = ["Ernesto Ittig <e.ittig@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
rand = "0.8.0"
atty = "0.2" # Oof
